# operating-system-project

./: .gitignore  CMakeLists.txt  README.md
lab1_bank_service/: CMakeLists.txt  README.md  build_and_run.sh  run.sh
lab1_bank_service/config/: config.json
lab1_bank_service/data/: customer_log.txt  customer_log2.txt  example_2.txt  output_log2.txt  teller_log.txt  teller_log2.txt
lab1_bank_service/include/: customer.hpp  globals.hpp  teller.hpp  utils.hpp
lab1_bank_service/report/: report.md
lab1_bank_service/scripts/: generate_data.py  run.py
lab1_bank_service/src/: customer.cpp  main.cpp  teller.cpp  utils.cpp
lab2_quick_sort/: CMakeLists.txt  README.md  build_and_run.sh  run.sh
lab2_quick_sort/include/: shared_memory.hpp  sorter.hpp
lab2_quick_sort/report/: report.md
lab2_quick_sort/scripts/: generate_data.py
lab2_quick_sort/src/: main.cpp  shared_memory.cpp  sorter.cpp
lab3_banker_algorithm/: CMakeLists.txt  README.md  build_and_run.sh  run.sh
lab3_banker_algorithm/data/: example_1.json  example_1_out.txt  example_2.json  example_2_out.txt  example_3.json  example_3_out.txt
lab3_banker_algorithm/include/: banker.hpp  utils.hpp
lab3_banker_algorithm/report/: report.md
lab3_banker_algorithm/src/: banker.cpp  banker.py  main.cpp  main.py  utils.cpp
lab3_banker_algorithm/src/python/: banker.py  main.py
